--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "phpoffice/phpword": "^1.3",
+        "tecnickcom/tcpdf": "^6.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
