--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,10 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    <IfModule mod_headers.c>
+    Header set X-Frame-Options "ALLOW-FROM https://docs.google.com"
+</IfModule>
+
     RewriteEngine On
 
     # Handle Authorization Header
