--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,8 +4,17 @@
     </IfModule>
 
     <IfModule mod_headers.c>
-    Header set X-Frame-Options "ALLOW-FROM https://docs.google.com"
-</IfModule>
+        Header set X-Frame-Options "ALLOW-FROM https://docs.google.com"
+    </IfModule>
+
+    # PHP Upload Settings
+    <IfModule mod_php.c>
+        php_value upload_max_filesize 50M
+        php_value post_max_size 55M
+        php_value max_execution_time 300
+        php_value max_input_time 300
+        php_value memory_limit 256M
+    </IfModule>
 
     RewriteEngine On
 
